<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Registration">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/icke" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voter_s_registration_form"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:textSize="10sp"
                    android:maxLength="20"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    tools:ignore="SmallSp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_identification_number"
                    android:inputType="number"
                    android:textSize="10sp"
                    android:maxLength="9"
                    android:drawableStart="@drawable/ic_baseline_add_card_24"
                    tools:ignore="SmallSp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_date_of_birth"
                    android:inputType="date"
                    android:textSize="10sp"
                    android:maxLength="11"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    tools:ignore="SmallSp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_age"
                    android:textSize="10sp"
                    android:maxLength="2"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    tools:ignore="SmallSp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_your_gender"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_marginStart="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    />
                <RadioButton
                    android:layout_marginStart="70dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_county"
                    android:textSize="10sp"
                    android:maxLength="20"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    tools:ignore="SmallSp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_sub_county"
                    android:textSize="10sp"
                    android:maxLength="20"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    tools:ignore="SmallSp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_ward"
                    android:textSize="10sp"
                    android:id="@+id/edEmail"
                    android:maxLength="20"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    tools:ignore="SmallSp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_voting_center"
                    android:textSize="10sp"
                    android:maxLength="20"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    tools:ignore="SmallSp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginEnd="60dp"
                    android:id="@+id/cam"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_add_a_photo_24"
                    />

                <ImageView
                    android:layout_marginStart="40dp"
                    android:id="@+id/print"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_fingerprint_24"
                    />

            </LinearLayout>

            <LinearLayout
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/choosePhoto"
                    android:text="@string/t_t_t_t_t_t_add_photo_t_t_t_t_t_t_t_t_t_t_t_t_t_t_upload_fingerprint"
                    />

            </LinearLayout>

            <Button
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/register_and_submit"
                />

            <TextView
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visit_our_website"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vrms_co_ke"
                android:textColor="#1A30AC"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/tvWeb"
                />

            <TextView
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textColor="@color/black"
                android:id="@+id/tvUserEmail"
                android:gravity="center"
                android:textStyle="bold"
                />

            <Button
                android:layout_marginVertical="20dp"
                android:layout_width="match_parent"
                android:id="@+id/btnLoginOut"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_700"
                android:text="@string/log_out"
                android:layout_marginHorizontal="120dp"
                />



        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>