<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.SignUp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/register"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="number"
            android:textSize="10sp"
            android:id="@+id/idNoEt"
            android:maxLength="20"
            android:drawableStart="@drawable/ic_baseline_person_24"
            tools:ignore="SmallSp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:textSize="10sp"
            android:id="@+id/edEmail"
            android:maxLength="40"
            android:drawableStart="@drawable/ic_baseline_email_24"
            tools:ignore="SmallSp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:textSize="10sp"
            android:id="@+id/edPhone"
            android:inputType="phone"
            android:maxLength="20"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            tools:ignore="SmallSp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textSize="10sp"
            android:id="@+id/edPass"
            android:maxLength="20"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            tools:ignore="SmallSp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnRegister"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:layout_marginHorizontal="120dp"
        android:text="@string/register"
        />

</LinearLayout>